--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0",
     "@google/genai": "^1.28.0",
-    "@supabase/supabase-js": "latest"
+    "@supabase/supabase-js": "^2.78.0",
+    "leaflet": "1.9.4",
+    "react-leaflet": "4.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
