--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.28.0",
     "@supabase/supabase-js": "^2.78.0",
     "leaflet": "1.9.4",
-    "react-leaflet": "4.2.1"
+    "react-leaflet": "4.2.1",
+    "idb": "^8.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
