--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^18.2.0",
-    "react": "^18.2.0",
     "@google/genai": "^1.28.0",
     "@supabase/supabase-js": "^2.78.0",
+    "idb": "^8.0.3",
     "leaflet": "1.9.4",
-    "react-leaflet": "4.2.1",
-    "idb": "^8.0.3"
+    "posthog-js": "^1.347.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "4.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
